"service_list" in weewx.conf. Users may want to do the same with their
old configuration file.

A new event, END_ARCHIVE_PERIOD has been added, signaling the end of
the archive period.

The LOOP packets emitted by the driver for the Davis Vantage series
now includes the max wind gust and direction seen since the beginning
of the current archive period.

The driver for the LaCrosse WS-28XX weather series continues to evolve and
mature. However, you should still consider it experimental.


2.3.3 06/21/13

The option week_start now works.

Updated WMR200 driver from Chris Manton.

Fixed bug that prevented queries from being run against a MySQL database.


2.3.2 06/16/13

Added support for the temperature-only sensor THWR800. Thanks to
user fstuyk!

Fixed bug that prevented overriding the FTP directory in section
[[FTP]] of the configuration file.

Day plots now show 24 hours instead of 27. If you want the old
behavior, then change option "time_length" to 97200.

Plots shorter than 24 hours are now possible. Thanks to user Andrew Tridgell.

If one of the sections SummaryByMonth, SummaryByYear, or ToDate is missing,
the report engine no longer crashes.

If you live at a high latitude and the sun never sets, the Almanac now
does the right thing.

Fixed bug that caused the first day in the stats database to be left out
of calculations of all-time stats.


2.3.1 04/15/13

Fixed bug that prevented Fine Offset stations from downloading archive
records if the archive database had no records in it.

rsync should now work with Python 2.5 and 2.6 (not just 2.7)


2.3.0 04/10/13

Davis Vantage stations can now produce station pressures (aka, "absolute
pressure"), altimeter pressures, as well as sea-level pressure. These will
be put in the archive database.

Along the same line, 'altimeter' pressure is now reported to CWOP, rather
than the 'barometer' pressure. If altimeter pressure is not available,
no pressure is reported.
